hard-gists/c47824c116e6a61a56d9/run.log
=== Docker Run Log for c47824c116e6a61a56d9 ===
Started at: Mi 29. Okt 19:52:59 CET 2025

[2025-10-29 19:52:59] START: Running container for c47824c116e6a61a56d9
[2025-10-29 19:53:00] SUCCESS: Container 2948ebb4e3b8c1243c9448563436c375af334d72c97733c1cf30c3672b171b3f started for c47824c116e6a61a56d9
=== Container logs for c47824c116e6a61a56d9 ===
  File "/snippet.py", line 294
    print "Loss after iteration %i: %f" % (i,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c47824c116e6a61a56d9 ===
[2025-10-29 19:53:02] INFO: Container 2948ebb4e3b8c1243c9448563436c375af334d72c97733c1cf30c3672b171b3f has stopped
